# TP-Final-Taller

./: .gitignore  Configuraciones.cpp  Configuraciones.h  InformeTecnico.md  ManualDeProyecto.md  ManualUsuario.md  README.md
cliente/: Makefile  assets
common/: CodigosOperacion.h  ColaBloqueanteMensajes.cpp  ColaBloqueanteMensajes.h  FallaConexionException.cpp  FallaConexionException.h  Mensaje.cpp  Mensaje.h  ProxyEnviador.cpp  ProxyEnviador.h  Serializacion.h  TCPIDs.h  Thread.cpp  commonProtocolo.cpp  commonProtocolo.h  commonSocket.cpp  commonSocket.h
servidor/: CMakeLists.txt  bosque.json  ciudad.json  configuraciones.json  mapa.json  mapa1.json  mapa2.json  mapaPrueba.json  mapaPrueba_.json  mapaPrueba__.json  mountain_landscape.tsx  prueba_main.cpp  pruebas_main.cpp  servidor_main.cpp
servidor/Clases/: Aceptador.cpp  Aceptador.h  Arma.cpp  Arma.h  ArmaCuracion.cpp  ArmaCuracion.h  Armadura.cpp  Armadura.h  Banquero.cpp  Banquero.h  BaseDeDatos.cpp  BaseDeDatos.h  BolsaDeItems.cpp  BolsaDeItems.h  Box.h  BuclePrincipal.cpp  BuclePrincipal.h  CMakeLists.txt  Casco.cpp  Casco.h  Clase.cpp  Clase.h  Cliente.cpp  Cliente.h  ClienteProxy.cpp  ClienteProxy.h  ClienteProxyEnviador.cpp  ClienteProxyEnviador.h  ColaBloqueante.cpp  ColaBloqueante.h  ColaDeEntidades.cpp  ColaDeEntidades.h  ColaDeSerializacion.cpp  ColaDeSerializacion.h  ColaOperaciones.cpp  ColaOperaciones.h  ColaSegura.cpp  ColaSegura.h  Colisionable.cpp  Colisionable.h  (+133 more)
servidor/TestsQuadTree/: Box.h  Colisionable.cpp  Colisionable.h  Entidad.cpp  Entidad.h  Makefile  Personaje.cpp  Posicion.cpp  Posicion.h  Posicionable.cpp  Posicionable.h  Quadtree.h  tests.cpp
(+290 files in other folders)
